--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "PrivacyML: A Tutorial"
-email: mimee@nyu.edu
+contact: mimee@nyu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Meaningful Privacy-Preserving Machine Learning and How To Evaluate AI Privacy.
   privacy.github.io | ML Privacy & Privacy Eval | A NeurIPS 2024 Tutorial | Vancouver, British Columbia, Canada | Dec 10, 2024
@@ -28,11 +28,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-sass:
-  sass_dir: blog/_sass
-  style: compressed
-assets:
-  asset_dir: blog/assets
+source: blog/
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
