--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "PrivacyML: A Tutorial"
-email: mimee@nyu.edu
+contact: mimee@nyu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Meaningful Privacy-Preserving Machine Learning and How To Evaluate AI Privacy.
   privacy.github.io | ML Privacy & Privacy Eval | A NeurIPS 2024 Tutorial | Vancouver, British Columbia, Canada | Dec 10, 2024
